# rtcamp9_setup

./: .gitmodules  AWS101.md  CMakeLists.txt  enable_sshd.ps1  exec_env_spec.md  semiauto_set_up.ps1  set_up_inter_instance_ssh.ps1  userdata.yml
samples/usecase2/: CMakeLists.txt  usecase2_main.cpp
samples/usecase3/: CMakeLists.txt  usecase3_main.cpp
scripts/: run_submissions.py  semiauto_set_up.ps1  set_up_inter_instance_ssh.ps1  userdata.yml
usecase2_submission/: run.py
usecase3_submission/: run.py
user2_cpu/: run.py
user3_cpu/: run.py
